폴더로 이동한 경로를 맞춰줌

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>지하철 전광판</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="public/styles.css">
 </head>
 <body>
   <div id="root">
@@ -12,7 +12,7 @@
       <span id="next-station">다음 역은 강남입니다</span>
     </div>
   </div>
-  <script src="script.ts">
+  <script src="public/script.js">
     const root = document.getElementById("root");
   </script>
 </body>
